# onnxruntime_flutter

android/: build.gradle  build_onnxruntime_16kb.sh
android/src/main/cpp/: .gitkeep  CMakeLists.txt
